# ktds-msai-6th

./: .env  README.md  app.py  hooktest.py  main.py  pyproject.toml  requirements.txt
BestBikeApp/: requirements.txt
DAY4/: 01.sample.py  02.AIpoem.py  03.chat.py  04.langchain.py  05.streamlit.py  05.streamlit_bak.py  07.langchain_1.py  app_basic.py  app_stream.py
DAY5/: .env  1_function_calling.py  2_embedding.py  3_retrieval.py  fileupload.py
DAY5/BestBikeApp/: application.py
DAY5/BestBikeApp/.azure/: config
DAY5/streamlit/: .env  app.py  streamlit.sh
Day 6/: README.md
Day 6/todays_samples/: .env  01.Computer_Vision.py  README.md
Day 8/: .env  01.azure-search-quickstart.ipynb  02.Quickstart-rag.ipynb  02.Quickstart-rag[2].ipynb  03.vector-search-quickstart.ipynb  README.md
ktds-msai-6th-mvp/: .env  README.md  app.py  streamlit.sh
ktds-msai-6th-mvp/data/: 9_field.json  board_data.json  컴플라이언스 9대분야.xlsx
ktds-msai-6th-mvp/data/mvp 데이터/: qbd_post_202509241637.json
ktds-msai-6th-mvp/data/uploads/: 9_field_1759130705.json
ktds-msai-6th-mvp/modules/: appinsight.py  azure_ai_search.py  newssummary.py  test_appinsights_local.py
streamlit/: .env  app.py
