[project]
name = "ktds-msai-6th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-vision-imageanalysis>=1.0.0",
    "azure-core>=1.35.1",
    "azure-storage-blob>=12.26.0",
    "faiss-cpu>=1.12.0",
    "flask>=3.1.2",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.108.0",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]
